Fixed a bunch of stuff on the backlog
3 stages of sorting, now reverts to timestamp column ascending on "natural" state. Might have some strange behavior, please test.
Sorting Table not valid after search fixed
Dragging columns of screen fixed. Easy built-in fix but table now looks ugly. Tell me if too ugly and i'll make my own fix.
Return column to small fixed. All columns now equal size + return column removed.
Selecting text disabled fixed. Right click menu added to copy row or cell + ctrl+c for current row. Please test for behavior.
Threaded file opening fixed
Loading Bar for file opening fixed. Please test with large files.

--- a/gui/src/main/resources/CSS/PrimaryStyle.css
+++ b/gui/src/main/resources/CSS/PrimaryStyle.css
@@ -6,8 +6,14 @@
     -fx-background-color: lightgreen;
 }
 
-.table-row-cell:selected {
+/*.table-row-cell:selected {
     -fx-background-color: blue;
+    -fx-color: lightgray;
+}*/
+
+.table-row:selected .table-cell {
+    -fx-border-width: 1px;
+    -fx-border-color: black;
 }
 
 
